--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -43,7 +43,7 @@ button,input {
     
 }
 .container {
-    max-width: 1300px;
+    
     width: 100%;
     margin: 0 auto;
     padding: 0 15px;
@@ -202,10 +202,11 @@ html {
 
 
 .border_box {
+  display: none;
     position: fixed;
     top: 0;
     left: 22px;
-    display: flex;
+  
     flex-direction: column  ;
     justify-content: center;
     align-items: center;
